--- a/css/iefonts_index.css
+++ b/css/iefonts_index.css
@@ -1,1 +1,1 @@
-#u102-4{font-family:roboto-n5, sans-serif;}#u110-4{font-family:roboto-n5, sans-serif;}#u202-4,#u201-4,#u203-4{font-family:roboto-n7, sans-serif;}#u235-4,#u130-4{font-family:'__Futura_5';}#u236-4,#u179-4{font-family:roboto-n7, sans-serif;}
+/* empty css file */
