--- a/css/iefonts_trades.css
+++ b/css/iefonts_trades.css
@@ -1,1 +1,1 @@
-#u102-4{font-family:roboto-n5, sans-serif;}#u110-4{font-family:roboto-n5, sans-serif;}#u202-4,#u201-4,#u203-4{font-family:roboto-n7, sans-serif;}#u448-4{font-family:'__Orator Std_5';}#u279-4{font-family:'__Futura_5';}#u276-4{font-family:roboto-n7, sans-serif;}
+/* empty css file */
